[package]
name = "wallpaper-engine-plasma"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
humantime = "2.3.0"
candle-core = { version = "0.9.2-alpha.2", features = ["cuda"] }
candle-transformers = { version = "0.9.2-alpha.2", features = ["cuda"] }
tokenizers = "0.22.2"
anyhow = "1.0.100"
hf-hub = "0.4.3"
image = "0.25.9"
zbus = "5.12.0"
tokio = "1.48.0"
sysinfo = "0.37.2"
serde_json = "1.0.148"
serde = { version = "1.0.228", features = ["derive"] }

[[bin]]
name = "wepd"
path = "src/bin/daemon.rs"

[[bin]]
name = "wep"
path = "src/bin/client.rs"